objects/PT_Parts_List_Revision_Shipset__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>L2I_Aircraft__c</referenceTo>
        <relationshipLabel>Parts List Revision Shipsets</relationshipLabel>
        <relationshipName>Parts_List_Revision_Shipsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Schedule_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Schedule Header</label>
        <referenceTo>L2I_DSH__c</referenceTo>
        <relationshipLabel>Parts List Revision Shipsets</relationshipLabel>
        <relationshipName>Parts_List_Revision_Shipsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Line_Number__c</fullName>
        <label>Line Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_List__c</fullName>
        <label>Parts List</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Parts List Revision Shipsets</relationshipLabel>
        <relationshipName>Parts_List_Revision_Shipsets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Shipset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Shipset</label>
        <referenceTo>L2I_DSL__c</referenceTo>
        <relationshipLabel>Parts List Revision Shipsets</relationshipLabel>
        <relationshipName>Parts_List_Revision_Shipsets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parts List Revision Shipset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLRS-{000}</displayFormat>
        <label>Parts List Revision Shipset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts List Revision Shipsets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>